test/files_test/errors/missing_close_paren.scm
; Test: Missing closing parenthesis - should return exit code 84
(+ 1 2
